<resources>
    <string name="app_name">nestApp</string>
    <string name="dev">DEVELOPER</string>
    <string name="floor">FLOOR</string>
    <string name="area">AREA</string>
    <string name="rooms">ROOMS</string>
    <string name="askOffer">ASK FOR OFFER</string>
    <string name="balcony">BALCONY</string>
    <string name="garage">GARAGE</string>
    <string name="greenarea">GREEN AREA</string>
    <string name="equip">OPTIONAL EQUIPMENT</string>
    <string name="storage">STORAGE AREA</string>
    <string name="distances">DISTANCES</string>
    <string name="citycentre">CITY CENTRE</string>
    <string name="airport">AIRPORT</string>
    <string name="railway">RAILWAY STATION</string>
    <string name="sort">SORT</string>
    <string name="search">Search</string>
    <string name="search_title">Search...</string>
    <string name="sort_by_name">SORT BY NAME</string>
    <string name="sort_by_area">SORT BY AREA</string>
    <string name="more_photos">GALLERY</string>
    <string name="flat_plan">Flat plan</string>
    <string name="external_view">External view</string>
    <string name="entrance_zone">Entrance zone</string>
    <string name="add">Finishing and accessories</string>
    <string name="love">Look at your favourites</string>
    <string name="browse">Search for a flat</string>
    <string name="logout">Log out</string>
    <string name="add_love">LIKE / DISLIKE</string>

    <string-array name="filter_ops">
        <item>Filter...</item>
        <item>BY NAME</item>
        <item>BY AREA</item>

    </string-array>

</resources>
