<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:orderInCategory="100"
        android:title="@string/search_title"
        app:showAsAction="always"
        app:actionViewClass="android.support.v7.widget.SearchView" />

    <item
        android:id="@+id/order_name"
        android:title="@string/sort_by_name"
        app:showAsAction="never"/>

    <item
        android:id="@+id/order_area"
        android:title="@string/sort_by_area"
        app:showAsAction="never"/>
</menu>