<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MenuActivity">

<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/up" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pacifico"
        android:text="let's start"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:shadowColor="@color/text_shadow"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="7"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.14" />
</android.support.constraint.ConstraintLayout>

    <RelativeLayout
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clickable="true"
        android:background="@color/myWhite">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="horizontal">
           <ImageView
               android:layout_width="wrap_content"
               android:layout_height="match_parent"
               app:srcCompat="@drawable/search"
               android:scaleType="fitXY"
               android:adjustViewBounds="true"
               />

           <TextView
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_marginLeft="10dp"
               android:layout_weight="1"
               android:fontFamily="@font/roboto"
               android:gravity="center_vertical"
               android:text="@string/browse"
               android:textColor="@color/myPink"
               android:textSize="18sp" />
       </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/love"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clickable="true"
        android:background="@color/myWhite">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/love"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/roboto"
                android:gravity="center_vertical"
                android:text="@string/love"
                android:textColor="@color/myPink"
                android:textSize="18sp" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/add"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clickable="true"
        android:background="@color/myWhite">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/ad"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/roboto"
                android:gravity="center_vertical"
                android:text="@string/add"
                android:textColor="@color/myPink"
                android:textSize="18sp" />
        </LinearLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/myWhite"
        android:fontFamily="@font/lato"
        android:text="@string/logout"
        android:textColor="@color/myPink" />
</LinearLayout>