<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/up"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pacifico"
            android:text="gallery"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:shadowColor="@color/text_shadow"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="7"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView3"
            app:layout_constraintVertical_bias="0.14"/>
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >


        <ImageView
            android:id="@+id/planView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/frame" />

        <ImageView
            android:id="@+id/galleryView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/planView"
            app:srcCompat="@drawable/frame" />

        <ImageView
            android:id="@+id/galleryView2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/galleryView"
            app:srcCompat="@drawable/frame" />

        <ImageView
            android:id="@+id/galleryView3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/galleryView2"
            app:srcCompat="@drawable/entrance" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/roboto_bold"
            android:shadowColor="@color/text_shadow"
            android:shadowDx="-1"
            android:shadowDy="-1"
            android:shadowRadius="1"
            android:text="@string/flat_plan"
            android:textColor="@color/myPink"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/planView"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/roboto_bold"
            android:shadowColor="@color/text_shadow"
            android:shadowDx="-1"
            android:shadowDy="-1"
            android:shadowRadius="1"
            android:text="@string/external_view"
            android:textColor="@color/myWhite"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/galleryView"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/roboto_bold"
            android:shadowColor="@color/text_shadow"
            android:shadowDx="-1"
            android:shadowDy="-1"
            android:shadowRadius="1"
            android:text="@string/external_view"
            android:textColor="@color/myWhite"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/galleryView2"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/roboto_bold"
            android:shadowColor="@color/text_shadow"
            android:shadowDx="-1"
            android:shadowDy="-1"
            android:shadowRadius="1"
            android:text="@string/entrance_zone"
            android:textColor="@color/myWhite"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/galleryView3"
            app:layout_constraintStart_toStartOf="parent" />


    </android.support.constraint.ConstraintLayout>
    </LinearLayout>
    </ScrollView>